Fixed image alignment

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -33,6 +33,7 @@ blockquote {
 }
 
 img {
+	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 }
